--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -85,7 +85,7 @@ max-width: 100%;
 }
 /* banner đăng ký */
 .form-dangky{
-    background: url(../images/better365_sg_hero_img1-1.png)no-repeat;
+    background: url(public/images/better365_sg_hero_img1-1.png)no-repeat;
     background-position: center center;
     background-size: auto 100%;
     height:850px;
@@ -113,7 +113,7 @@ max-width: 100%;
     padding: 10px 13px;
     border-radius: 5px;
     cursor: pointer;
-    background: url(../images/bottom_black.png) right 16px center no-repeat transparent;
+    background: url(public/images/bottom_black.png) right 16px center no-repeat transparent;
     background-size: 12px 6px;
     border: 1px solid #ddd;
     color: #777;
@@ -315,7 +315,7 @@ width:auto;
 .block-intro2{
     margin-top: 3rem;
     padding: 4rem 0;
-    background: url(/public/images/banner-grab-for-business.15i2cKa.jpg)no-repeat;
+    background: url(public/images/banner-grab-for-business.15i2cKa.jpg)no-repeat;
     color: #fff;
     background-size: auto 100%;
     background-position: top right;
@@ -341,7 +341,7 @@ width:auto;
     margin-top:-25px;
 }
 .block-intro3{
-    background: url(../images/dg-dl-grab-back.jpg)no-repeat;
+    background: url(public/images/dg-dl-grab-back.jpg)no-repeat;
     background-size: cover;
     background-position: center center;
 }
