--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -315,7 +315,7 @@ width:auto;
 .block-intro2{
     margin-top: 3rem;
     padding: 4rem 0;
-    background: url(public/images/banner-grab-for-business.15i2cKa.jpg)no-repeat;
+    background: url(public/images/banner-grab-for-business.jpg)no-repeat;
     color: #fff;
     background-size: auto 100%;
     background-position: top right;
