--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,6 +79,7 @@ max-width: 100%;
     display: inline-block;
     font-size:1.2rem;
     color:#555;
+    line-height: 1;
 }
 .nav-menu{
     display: none;
